# trading-bot-v3

./: .gitignore  README.md  pyproject.toml
config/: knobs.toml  settings.example.toml
diagnostics/: sweep_results.json
scripts/: backtest.py  calibration_plots.py  download_binance.py  enrich_microstructure.py  live.py  sweep_adaptive_params.py
src/trading_bot/: __about__.py  __init__.py
src/trading_bot/backtest/: __init__.py  engine.py
src/trading_bot/config/: __init__.py  settings.py
src/trading_bot/data/: __init__.py  binance_client.py  binance_downloader.py  client.py  enriched.py  history.py  live.py  loader.py  memory.py  microstructure.py  recorder.py  storage.py  stream.py
src/trading_bot/execution/: __init__.py  binance_futures.py  logging_client.py  order_router.py
src/trading_bot/features/: __init__.py  engineer.py  pipeline.py  samples.py  scaler.py
src/trading_bot/live/: __init__.py  session.py  strategy.py
src/trading_bot/models/: __init__.py  calibration.py  regime.py  river_pipeline.py
src/trading_bot/tuning/: __init__.py  cli.py  registry.py
src/trading_bot/utils/: __init__.py  datetime.py
tests/: test_features_samples.py  test_live_impute.py  test_normalizer.py  test_smoke.py  test_utils_datetime.py
